Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 <li>User-configurable timers</li>
 <li>User-configurable "finished" message</li>
 <li>Optionally play a sound when finished</li>
-</ul><h2>To Do</h2>
+</ul><h2>Screenshots</h2>
+
+<p><img src="http://www.localstatic.com/images/screenshot-steep.png" alt="Screenshot - No timer running"><img src="http://www.localstatic.com/images/screenshot-steep-running.png" alt="Screenshot - Timer running"></p>
+
+<h2>To Do</h2>
 
 <p>The program works decently now, but there are some things that I will be adding to bring it to the point that it fulfills my needs better:</p>
 
