Update links to reflect renamed project repo
Renamed repo from "Steep" to "steep" (case change only). Updated links to reflect this change.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/localstatic/Steep">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/localstatic/steep">View on GitHub</a>
 
           <h1 id="project_title">Steep</h1>
           <h2 id="project_tagline">Tea timer application in Python</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/localstatic/Steep/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/localstatic/Steep/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/localstatic/steep/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/localstatic/steep/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
