Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,64 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Steep : Tea timer application in Python" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Steep by localstatic</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Steep</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/localstatic/steep">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/localstatic/steep/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/localstatic/steep/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/localstatic/steep">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Steep</h1>
-          <h2 id="project_tagline">Tea timer application in Python</h2>
+      <section>
+        <div id="title">
+          <h1>Steep</h1>
+          <p>Tea timer application in Python</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/localstatic">localstatic</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/localstatic/steep/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/localstatic/steep/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>Steep</h1>
+        <h1>
+<a name="steep" class="anchor" href="#steep"><span class="octicon octicon-link"></span></a>Steep</h1>
 
 <p>Steep is a tea timer application written in Python &amp; using PyGTK and Glade for the GUI. I wrote it so that I could use the same program on Linux and Windows. It runs on both platforms, assuming the prerequisites are installed. It likely will run on other platforms as well, but I have not tested this. </p>
 
-<h2>Features</h2>
+<h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
 <li>User-configurable timers</li>
 <li>User-configurable "finished" message</li>
 <li>Optionally play a sound when finished</li>
-</ul><h2>Screenshots</h2>
+</ul><h2>
+<a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
 <p><img src="http://www.localstatic.com/images/screenshot-steep.png" alt="Screenshot - No timer running"><img src="http://www.localstatic.com/images/screenshot-steep-running.png" alt="Screenshot - Timer running"></p>
 
-<h2>To Do</h2>
+<h2>
+<a name="to-do" class="anchor" href="#to-do"><span class="octicon octicon-link"></span></a>To Do</h2>
 
 <p>The program works decently now, but there are some things that I will be adding to bring it to the point that it fulfills my needs better:</p>
 
 <ul>
 <li>Sorting of timers list</li>
 <li>UI for adding timers &amp; editing timer properties</li>
-</ul><h2>Requirements</h2>
+</ul><h2>
+<a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
 
 <ul>
 <li>Python</li>
 <li>python-gtk2</li>
 <li>python-glade</li>
-</ul><h2>License</h2>
+</ul><h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p>The MIT License</p>
 
@@ -82,17 +95,9 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Steep maintained by <a href="https://github.com/localstatic">localstatic</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
